[tool.poetry]
name = "bot-topwar"
version = "0.1.0"
description = ""
authors = ["Fernando Antunes <f.antunes84@gmail.com>"]
readme = "README.md"
packages = [{include = "bot_topwar"}]

[tool.poetry.dependencies]
python = "^3.11"
pyautogui = "^0.9.53"
pillow = "^9.5.0"
opencv-python = "^4.7.0.72"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
